# dither

./: .gitignore  .gitmodules
src/: CMakeLists.txt  DTDither.c  DTImage.c  DTPalette.c  MCQuantization.c  main.c
src/include/: DTDither.h  DTImage.h  DTPalette.h  MCQuantization.h
